# competitor-monitoring

./: .env.example  .gitignore  PRODUCTION_CHECKLIST.md  README.md  agnaradie-pricing-agent-spec.md  alembic.ini  pyproject.toml  run_pipeline.py
config/: compare_competitors_ai_insights_prompt.txt  competitors.yaml  playbooks.yaml
dashboard/: app.py  seller_dashboard_data.py  seller_dashboard_view.py
data/: ag_catalogue.csv
item-analysis/: Allegro zalistované položky 42026.xlsx  allegro_allegro_offers_2484-4979_2026-04-19.xlsx  allegro_api_scraper.py  allegro_cookies.json  allegro_eans.csv  allegro_offers.csv  allegro_offers_2484-4979.csv  allegro_offers_test.csv  allegro_offers_wide.xlsx  allegro_snapshot.md  export_allegro_offers.py  load_allegro_offers.py  read_allegro_eans.py  scrape_allegro.py  scrape_allegro_brightdata.py
jobs/: backfill_product_categories.py  daily_alert.py  daily_ingest.py  daily_match.py  daily_recommend.py  daily_scrape.py  enrich_allegro_eans.py  export_allegro_offers.py  export_manufacturer.py  export_prices.py  load_allegro_offers.py  manufacturer_scrape.py  match_products.py  normalise_brands.py  old_match_products.py  read_allegro_eans.py  run_matching.py  run_new_matching.py  scrape_allegro.py  scrape_allegro_brightdata.py
scripts/: bootstrap_db.sh  bulk_ingest.py  inspect_competitor.py  live_comparison.py  scrape.py  seed_demo_data.py  smoke_test.py
tests/: test_catalogue_ingest.py  test_compare_competitors_ai_insights.py  test_compare_competitors_filters.py  test_dashboard_matching_review.py  test_db_models.py  (+11 more)
(+106 files in other folders)
